# vox

./: .gitignore  CLAUDE.md  Cargo.toml  MODELS.md  README.md  pyproject.toml  uninstall.sh
claude/: README.md  install.sh  md2speech.sh  vox-speak.sh
claude/skills/vox/: SKILL.md
docs/: meta-agent.md  multi-provider-design.md  providers.md  readout-modes.md  tray-app.md
examples/: phoneme_check.rs
src/: config.rs  main.rs  player.rs  tui.rs
src/providers/: elevenlabs.rs  kokoro.rs  mod.rs  openai_compat.rs  xai.rs
src/src/: main.rs
src/vox/: __init__.py  cli.py
tests/: md2speech.rs
tray/: Cargo.toml  README.md  tauri.conf.json
tray/src/: main.rs
tray/ui/: index.html
