[package]
name = "vox"
version = "0.3.0"
edition = "2021"
description = "Local streaming text-to-speech CLI — Kokoro via ONNX, single binary"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
hound = "3.5"
kokoros = { git = "https://github.com/lucasjinreal/Kokoros" }
rodio = "0.19"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
ureq = "2"

[profile.release]
lto = true
strip = true

[dev-dependencies]
espeak-rs = "0.1.9"
