[package]
name = "vox"
version = "0.5.0"
edition = "2021"
description = "Local streaming text-to-speech CLI — Kokoro via ONNX, single binary"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
dirs = "5"
hound = "3.5"
kokoros = { git = "https://github.com/lucasjinreal/Kokoros" }
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
rodio = "0.19"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
ureq = "2"

[profile.release]
lto = true
strip = true

[dev-dependencies]
espeak-rs = "0.1.9"
