[project]
name = "vox"
version = "0.1.0"
description = "Local streaming text-to-speech CLI — Kokoro via MLX on Apple Silicon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx-audio==0.2.9",
    "misaki[en]>=0.9",
    "loguru>=0.7",
    "sounddevice>=0.5",
    "soundfile>=0.13",
    "click>=8.1",
    "numpy>=1.26",
    # spacy English model misaki needs; declared so isolated envs get it
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[project.scripts]
vox = "vox.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vox"]

[tool.hatch.metadata]
allow-direct-references = true
