[package]
name = "vox-tray"
version = "0.1.0"
edition = "2021"
description = "Menu-bar companion app for vox: tray controls, global speak-clipboard shortcut, and a local socket API"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
